creating install.sh and making minor tweaks

--- a/template/standard_report.html
+++ b/template/standard_report.html
@@ -285,9 +285,8 @@
         </div>
         <!-- Footer -->
         <footer class="text-center mt-4">
-            <p class="text-muted">Created by Euri, the crazy Russian Internet Truffle Hog!.</p>
+            <p class="text-muted">Created by MpRecon, a MaxProton Labs product.</p>
             <pre>
-
  /$$      /$$ /$$$$$$$  /$$$$$$$
 | $$$    /$$$| $$__  $$| $$__  $$
 | $$$$  /$$$$| $$  \ $$| $$  \ $$  /$$$$$$   /$$$$$$$  /$$$$$$  /$$$$$$$
